crash when using expand Face Sets #74492

Closed
opened 2020-03-06 13:17:56 +01:00 by kookitoo · 12 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1060 3GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.66

Blender Version
Broken: version: 2.83 (sub 6), branch: master, commit date: 2020-03-06 10:05, hash: 7d9a5b7b10
Worked: (optional)

Short description of error
when i use expand face sets shift+w in sculpt mode then cancel it using esc/rmb blender crash

Exact steps for others to reproduce the error
default cube> remesh it using ctrl+r> setting face sets to 1.0 in overlays >ctrl+w to face set expand >esc/rmb to cancel

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1060 3GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.66 **Blender Version** Broken: version: 2.83 (sub 6), branch: master, commit date: 2020-03-06 10:05, hash: `7d9a5b7b10` Worked: (optional) **Short description of error** when i use expand face sets shift+w in sculpt mode then cancel it using esc/rmb blender crash **Exact steps for others to reproduce the error** default cube> remesh it using ctrl+r> setting face sets to 1.0 in overlays >ctrl+w to face set expand >esc/rmb to cancel
Author

Added subscriber: @kookitoo

Added subscriber: @kookitoo

#74571 was marked as duplicate of this issue

#74571 was marked as duplicate of this issue

#74549 was marked as duplicate of this issue

#74549 was marked as duplicate of this issue

#74520 was marked as duplicate of this issue

#74520 was marked as duplicate of this issue

#74508 was marked as duplicate of this issue

#74508 was marked as duplicate of this issue
Pablo Dobarro self-assigned this 2020-03-06 13:48:48 +01:00

This issue was referenced by 6eb76f6430

This issue was referenced by 6eb76f64304235bd91e7a226019da5424e0b28d3
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member
Added subscribers: @Frozen_Death_Knight, @TheRedWaxPolice
Member

Added subscriber: @anagi

Added subscriber: @anagi
Member

Added subscriber: @Jayanam

Added subscriber: @Jayanam
Member
Added subscribers: @PiotrZgodzinski, @ankitm, @Asad-ullahKhan
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74492
No description provided.